--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,6 +22,9 @@ button {
     color: white;
     padding: 0.5rem 1.5rem;
     cursor: pointer;
+  &:active {
+    background: #a70cbe;;
+  }
 }
 
 .link-wrapper {
