--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -8,6 +8,7 @@ header{
   color: #ddd;
   display: flex;
   justify-content: space-between;
+  padding: 0 20px;
 
   .link-wrapper {
     align-self: center;
