--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,8 @@
 @import "./components/notFoundPage";
 @import "./components/login";
 @import "./components/header";
+@import "./components/informationWithImage";
+@import "components/allPhotosForCurrentUser";
 
 
 body {
