renamed Home page to Welcome.tsx

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,7 +2,8 @@
 @import "./components/login";
 @import "./components/header";
 @import "./components/informationWithImage";
-@import "components/allPhotosForCurrentUser";
+@import "./components/allPhotosForCurrentUser";
+@import "./components/welcome";
 
 
 body {
