--- a/styles/pages/_allPhotos.scss
+++ b/styles/pages/_allPhotos.scss
@@ -1,13 +1,9 @@
-.all-photos-for-current-user__container {
+.all-photos__container {
   max-width: 80%;
   margin-left: auto;
   margin-right: auto;
 
-  .all-photos-for-current-user__reload-button {
-
-  }
-
-  .all-photos-for-current-user__image {
+  .all-photos__image-wrapper {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -18,7 +14,7 @@
     top: 0;
     left: 0;
 
-    .all-photos-for-current-user__layer {
+    .all-photos__layer {
       background-color: rgba(248, 247, 216, 0.7);
       position: absolute;
       top: 0;
@@ -26,20 +22,23 @@
       width: 100%;
       height: 100%;
     }
-    button {
+    .all-photos__button,
+    .all-photos__button-with-bottom-margin {
+
       position: relative;
+      z-index: 10000;
     }
-    .all-photos-for-current-user__button-with-bottom-margin {
+    .all-photos__button-with-bottom-margin {
       margin-bottom: 200px;
     }
-    img {
+    .all-photos__image {
       max-width: 80%;
       max-height: 80%;
       display: block;
       position: relative;
     }
 
-    .all-photos-for-current-user__loading-state {
+    .all-photos__loading-state {
       position: fixed;
       top: 0;
       left: 0;
@@ -51,7 +50,7 @@
       justify-content: center;
       align-items: center;
     }
-    .all-photos-for-current-user__loading {
+    .all-photos__loading {
       width: 100px;
       height: 100px;
       border-radius: 50%;
