--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,7 +2,7 @@
 @import "pages/login";
 @import "./components/header";
 @import "./components/informationWithImage";
-@import "pages/allPhotosForCurrentUser";
+@import "pages/allPhotos";
 @import "pages/welcome";
 @import "./pages/uploadImage";
 @import "./components/footer";
