--- a/styles/pages/_uploadImage.scss
+++ b/styles/pages/_uploadImage.scss
@@ -1,3 +1,16 @@
+.uploadImage__submit-button {
+
+  &:disabled {
+    background: grey;
+
+    &:hover {
+      background: grey;
+      cursor:not-allowed
+    }
+  }
+
+}
+
 .uploadImage__image-preview {
   width: 100%;
   height: 80vh;
