--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,11 +1,12 @@
 @import "pages/notFoundPage";
 @import "pages/login";
-@import "components/header";
-@import "components/informationWithImage";
 @import "pages/allPhotos";
 @import "pages/welcome";
 @import "pages/uploadImage";
+@import "pages/menu";
 @import "components/footer";
+@import "components/header";
+@import "components/informationWithImage";
 
 * {
   margin: 0;
