small update in css UploadPhoto.tsx + renamed PageDescription to PageName in RouterEnum.ts

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,7 +2,7 @@
 @import "pages/login";
 @import "pages/allPhotos";
 @import "pages/welcome";
-@import "pages/uploadImage";
+@import "pages/uploadPhoto";
 @import "pages/menu";
 @import "components/footer";
 @import "components/header";
