--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,16 +1,31 @@
 header{
+  user-select: none;
   background: #555555;
   position: sticky;
   top: 0;
 
-  .header__wrapper {
+  .header__container {
     max-width: 1100px;
     width: 80%;
     margin: auto;
     color: #ddd;
     display: flex;
     justify-content: space-between;
-    //padding: 0 20px;
+
+    .header__link-wrapper {
+      a {
+        border: none;
+        font-size: 2em;
+        font-weight: 600;
+        color: #3399ff;
+        text-decoration: none;
+
+        &:focus {
+          outline: none;
+          box-shadow: none;
+        }
+      }
+    }
 
     .link-wrapper {
       align-self: center;
