--- a/src/styles/pages/_uploadPhoto.scss
+++ b/src/styles/pages/_uploadPhoto.scss
@@ -3,30 +3,115 @@
   max-width: 1100px;
   margin: auto;
 
-  .uploadImage__submit-button {
+  .uploadPhoto__wrapper {
+    padding: 20px;
 
-    &:disabled {
-      background: grey;
+    .uploadPhoto__box {
+      box-shadow: 0 0.75em 1em hsla(240,10%,5%,0.3);
+      background-color: hsl(240, 10%, 10%);
+      padding: 30px;
+      border-radius: 15px;
+      color: #fff;
 
-      &:hover {
-        background: grey;
-        cursor:not-allowed
+      .uploadPhoto__name {
+        font-size: 24px;
+        font-weight: bold;
+        width: 100%;
+        text-align: center;
       }
-    }
 
+      .uploadPhoto__text {
+        margin: 10px 0 10px;
+        width: 100%;
+        text-align: center;
+      }
+
+      .uploadPhoto__chooseFileWrapper {
+        width: 100%;
+        position: relative;
+
+        .uploadPhoto__button {
+          color: gray;
+          padding: 8px 20px;
+          border: 0.125rem dashed hsla(240,10%,50%,0.4);
+          border-radius: 8px;
+          font-size: 20px;
+          font-weight: bold;
+          transition: all 0.3s ease;
+          width: 100%;
+          background: transparent;
+
+          &:hover {
+            background-color: hsla(240,10%,60%,0.2)
+          }
+
+          input[type=file] {
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            opacity: 0;
+          }
+        }
+      }
+
+      .uploadPhoto__submit-button-wrapper {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+
+        .uploadPhoto__submit-button {
+
+          &:disabled {
+            background: grey;
+
+            &:hover {
+              background: grey;
+              cursor:not-allowed
+            }
+          }
+
+        }
+      }
+
+      .uploadPhoto__photo-preview {
+        padding: 40px;
+        width: 100%;
+        height: 60vh;
+        display: flex;
+        justify-content: center;
+
+        img {
+          object-fit: contain;
+        }
+      }
+
+      .uploadPhoto__city-wrapper {
+        display: flex;
+        justify-content: center;
+
+        span {
+          margin-right: 10px;
+        }
+
+        input {
+          width: 300px;
+          border-radius: 5px;
+
+          &.warning {
+            border: 2px solid red;
+          }
+        }
+      }
+
+      .uploadPhoto__gps-wrapper {
+        display: flex;
+        justify-content: center;
+      }
+
+    }
   }
 
-  .uploadPhoto__photo-preview {
-    width: 100%;
-    height: 80vh;
-    display: flex;
-    justify-content: center;
-
-    img {
-      max-width: 80%;
-      max-height: 80%;
-      display: block;
-      position: relative;
-    }
-  }
 }
