--- a/src/styles/pages/_uploadPhoto.scss
+++ b/src/styles/pages/_uploadPhoto.scss
@@ -1,3 +1,5 @@
+@import "../default";
+
 .uploadPhoto__container {
   user-select: none;
   max-width: 1100px;
@@ -5,6 +7,12 @@
 
   .uploadPhoto__wrapper {
     padding: 20px;
+    display: flex;
+    justify-content: center;
+
+    @include phoneResolutionVerySmallWidth {
+      padding: 0;
+    }
 
     .uploadPhoto__box {
       box-shadow: 0 0.75em 1em hsla(240,10%,5%,0.3);
@@ -12,6 +20,16 @@
       padding: 30px;
       border-radius: 15px;
       color: #fff;
+      max-width: 90%;
+      min-width: 300px;
+      width: auto;
+      height: auto;
+
+      @include phoneResolutionVerySmallWidth {
+        max-width: 100%;
+        padding: 10px;
+        border-radius: 0;
+      }
 
       .uploadPhoto__name {
         font-size: 24px;
@@ -62,6 +80,11 @@
         justify-content: center;
         margin-top: 20px;
 
+        @include phoneResolutionVerySmallWidth {
+          margin-bottom: 20px;
+        }
+
+
         .uploadPhoto__submit-button {
 
           &:disabled {
@@ -77,13 +100,15 @@
       }
 
       .uploadPhoto__photo-preview {
-        padding: 40px;
+        padding: 40px 0;
         width: 100%;
-        height: 60vh;
+        max-height: 60vh;
         display: flex;
         justify-content: center;
 
         img {
+          max-width: 100%;
+          max-height: 100%;
           object-fit: contain;
         }
       }
