--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,12 +1,12 @@
 @import "pages/notFoundPage";
 @import "pages/login";
-@import "pages/allPhotos";
+@import "pages/listOfPhotos";
 @import "pages/welcome";
 @import "pages/uploadPhoto";
 @import "pages/menu";
 @import "components/footer";
 @import "components/header";
-@import "components/informationWithImage";
+@import "components/informationWithPhoto";
 
 * {
   margin: 0;
