--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,3 +1,5 @@
+@import "../default";
+
 header{
   user-select: none;
   background: #555555;
@@ -6,7 +8,7 @@ header{
   z-index: 999;
 
   .header__container {
-    max-width: 1100px;
+    max-width: $max-desktop-width;
     width: 80%;
     margin: auto;
     color: #ddd;
