--- a/src/styles/pages/_listOfPhotos.scss
+++ b/src/styles/pages/_listOfPhotos.scss
@@ -1,9 +1,28 @@
-.all-photos__container {
-  max-width: 80%;
+@import "../default";
+
+.list-of-photos__container {
+  user-select: none;
+  max-width: $max-desktop-width;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 
-  .all-photos__image-wrapper {
+  .list-of-photos__reload-button {
+    margin: 0 auto;
+  }
+
+  .list-of-photos__photos-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .list-of-photos__photo-wrapper {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -14,7 +33,7 @@
     top: 0;
     left: 0;
 
-    .all-photos__layer {
+    .list-of-photos__layer {
       background-color: rgba(248, 247, 216, 0.7);
       position: absolute;
       top: 0;
@@ -22,23 +41,26 @@
       width: 100%;
       height: 100%;
     }
-    .all-photos__button,
-    .all-photos__button-with-bottom-margin {
-
+    .list-of-photos__button,
+    .list-of-photos__button-with-bottom-margin {
       position: relative;
       z-index: 10000;
     }
-    .all-photos__button-with-bottom-margin {
+    .list-of-photos__button-with-bottom-margin {
       margin-bottom: 200px;
     }
-    .all-photos__image {
+    .list-of-photos__image {
       max-width: 80%;
       max-height: 80%;
       display: block;
       position: relative;
+
+      @include verySmallHeight() {
+        max-height: 60%;
+      }
     }
 
-    .all-photos__loading-state {
+    .list-of-photos__loading-state {
       position: fixed;
       top: 0;
       left: 0;
@@ -50,7 +72,7 @@
       justify-content: center;
       align-items: center;
     }
-    .all-photos__loading {
+    .list-of-photos__loading {
       width: 100px;
       height: 100px;
       border-radius: 50%;
@@ -65,4 +87,5 @@
     }
 
   }
+
 }
