--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,7 @@
 @import "components/footer";
 @import "components/header";
 @import "components/informationWithPhoto";
+@import "components/errorModal";
 
 * {
   margin: 0;
